--- a/qtgui/exe/res/ui/DmsConfigOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsConfigOptionsWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DmsGuiOptionsWindow</class>
- <widget class="QDialog" name="DmsGuiOptionsWindow">
+ <class>DmsConfigOptionsWindow</class>
+ <widget class="QDialog" name="DmsConfigOptionsWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>GUI options</string>
+   <string>Config options</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
