Add (i) to editor parameters in local machine settings dialog, issue #501

--- a/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>607</width>
+    <width>616</width>
     <height>622</height>
    </rect>
   </property>
@@ -193,27 +193,6 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0" colspan="3">
-      <widget class="QLabel" name="lbl_script">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Box</enum>
-       </property>
-       <property name="lineWidth">
-        <number>0</number>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Script Editor &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
      <item row="8" column="0" colspan="11">
       <widget class="Line" name="line_2">
        <property name="sizePolicy">
@@ -280,40 +259,6 @@
        </property>
       </widget>
      </item>
-     <item row="12" column="0" colspan="3">
-      <widget class="QLabel" name="lbl_parallel_processing">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Box</enum>
-       </property>
-       <property name="lineWidth">
-        <number>0</number>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Parallel Processing&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" colspan="2">
-      <widget class="QLabel" name="lbl_localdata">
-       <property name="font">
-        <font>
-         <family>MS Shell Dlg 2</family>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Local Data: </string>
-       </property>
-      </widget>
-     </item>
      <item row="5" column="2" colspan="8">
       <widget class="QLineEdit" name="m_sd_input"/>
      </item>
@@ -349,39 +294,6 @@
        </property>
        <property name="text">
         <string>Source Data: </string>
-       </property>
-      </widget>
-     </item>
-     <item row="12" column="3">
-      <widget class="QPushButton" name="m_pp_info">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="cursor">
-        <cursorShape>WhatsThisCursor</cursorShape>
-       </property>
-       <property name="toolTip">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Parallel processing &lt;/span&gt;is a type of computation in which many calculations are carried out simultaneously by using multiple cores that perform tasks in separate threads.&lt;/p&gt;&lt;p&gt;The current options are:
-&lt;ol&gt;
-&lt;li&gt;keeps the GUI responsive by suspending further calculation steps whenever user events are queued, and resume these when idle.&lt;/li&gt;
-&lt;li&gt;split up operations into separate tasks per data-segment.&lt;/li&gt;
-&lt;li&gt;performs multiple operations simultaneously.&lt;/li&gt;
-&lt;li&gt;pipeline data-segment processing by delaying data-segment production to the taks that requests such segments.&lt;/li&gt;
-&lt;/ol&gt;
-&lt;/p&gt;&lt;p&gt;It is advised to use the default settings in most cases. For specific configurations/machines it might be useful to deviate from these setting.&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>../images/DP_ValueInfo.bmp</normaloff>../images/DP_ValueInfo.bmp</iconset>
-       </property>
-       <property name="flat">
-        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -460,29 +372,6 @@
        </property>
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
-       </property>
-      </widget>
-     </item>
-     <item row="17" column="0" colspan="7">
-      <widget class="QLabel" name="lbl_memory_flushing">
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="frameShape">
-        <enum>QFrame::Box</enum>
-       </property>
-       <property name="lineWidth">
-        <number>0</number>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Treshold for memory flushing wait procedure &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
       </widget>
      </item>
@@ -607,15 +496,127 @@
      </item>
      <item row="10" column="7" colspan="4">
       <widget class="QPushButton" name="m_set_editor_parameters">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
        <property name="text">
-        <string>Set default parameters for application</string>
+        <string>Set default parameters for editor</string>
        </property>
       </widget>
      </item>
-     <item row="10" column="2" colspan="5">
+     <item row="10" column="2" colspan="4">
       <widget class="QLineEdit" name="m_editor_parameters_input"/>
      </item>
-     <item row="17" column="7">
+     <item row="10" column="6">
+      <widget class="QPushButton" name="m_param_info">
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;B&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Script Editor Parameters&lt;/span&gt;&lt;/B&gt;
+
+&lt;BR&gt;&lt;BR&gt;
+These parameters are used to start the Script Editor with the relevant configuration file and at a requested line.
+
+For Notepad ++ the advised default parameters are:
+&lt;ol&gt;
+
+&lt;li&gt;&lt;B&gt;&quot;%F&quot;:&lt;/B&gt; %F is a placeholder for the full path of the configuration file to be opened.The double quotes are added to also support full paths with spaces.&lt;/li&gt;
+&lt;li&gt; &lt;B&gt;-n%L:&lt;/B&gt; -n  is used by Notepad ++ to highlight the line specified. The %L syntax results in the requested line number.&lt;/li&gt; 
+
+&lt;/ol&gt;
+
+&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../images/DP_ValueInfo.bmp</normaloff>../images/DP_ValueInfo.bmp</iconset>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="0" colspan="2">
+      <widget class="QLabel" name="lbl_parallel_processing">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Box</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Parallel Processing&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="12" column="2">
+      <widget class="QPushButton" name="m_pp_info">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="cursor">
+        <cursorShape>WhatsThisCursor</cursorShape>
+       </property>
+       <property name="toolTip">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Parallel processing &lt;/span&gt;is a type of computation in which many calculations are carried out simultaneously by using multiple cores that perform tasks in separate threads.&lt;/p&gt;&lt;p&gt;The current options are:
+&lt;ol&gt;
+&lt;li&gt;keeps the GUI responsive by suspending further calculation steps whenever user events are queued, and resume these when idle.&lt;/li&gt;
+&lt;li&gt;split up operations into separate tasks per data-segment.&lt;/li&gt;
+&lt;li&gt;performs multiple operations simultaneously.&lt;/li&gt;
+&lt;li&gt;pipeline data-segment processing by delaying data-segment production to the taks that requests such segments.&lt;/li&gt;
+&lt;/ol&gt;
+&lt;/p&gt;&lt;p&gt;It is advised to use the default settings in most cases. For specific configurations/machines it might be useful to deviate from these setting.&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>../images/DP_ValueInfo.bmp</normaloff>../images/DP_ValueInfo.bmp</iconset>
+       </property>
+       <property name="flat">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="0" colspan="6">
+      <widget class="QLabel" name="lbl_memory_flushing">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Box</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Treshold for memory flushing wait procedure &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="17" column="6">
       <widget class="QPushButton" name="m_tmf_info">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -643,6 +644,40 @@ In most cases we advice to use a value between 80% and 90%.</string>
        </property>
        <property name="flat">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0" colspan="4">
+      <widget class="QLabel" name="lbl_script">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="autoFillBackground">
+        <bool>true</bool>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Box</enum>
+       </property>
+       <property name="lineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Configuration File  Editor &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0" colspan="2">
+      <widget class="QLabel" name="lbl_localdata">
+       <property name="font">
+        <font>
+         <family>MS Shell Dlg 2</family>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Local Data: </string>
        </property>
       </widget>
      </item>
