--- a/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
+++ b/qtgui/exe/res/ui/DmsLocalMachineOptionsWindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>616</width>
+    <width>617</width>
     <height>628</height>
    </rect>
   </property>
@@ -73,7 +73,6 @@
       <widget class="QLabel" name="lbl_max">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -164,6 +163,7 @@
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -185,7 +185,6 @@
       <widget class="QLabel" name="lbl_title">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -217,7 +216,6 @@
       <widget class="QLabel" name="lbl_applications_2">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -230,7 +228,6 @@
       <widget class="QLabel" name="lbl_applications">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -261,10 +258,22 @@
       </widget>
      </item>
      <item row="5" column="2" colspan="8">
-      <widget class="QLineEdit" name="m_sd_input"/>
+      <widget class="QLineEdit" name="m_sd_input">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="9" column="2" colspan="8">
-      <widget class="QLineEdit" name="m_editor_input"/>
+      <widget class="QLineEdit" name="m_editor_input">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="3" column="0" colspan="11">
       <widget class="Line" name="line">
@@ -289,7 +298,6 @@
       <widget class="QLabel" name="lbl_sourcedata">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -309,7 +317,6 @@
       <widget class="QLabel" name="lbl_current_flush_value">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -325,7 +332,6 @@
       <widget class="QLabel" name="m_flush_treshold_text">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -345,7 +351,6 @@
       <widget class="QLabel" name="lbl_min">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
@@ -400,6 +405,7 @@
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -436,10 +442,21 @@
       </widget>
      </item>
      <item row="4" column="2" colspan="8">
-      <widget class="QLineEdit" name="m_ld_input"/>
+      <widget class="QLineEdit" name="m_ld_input">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="5" column="10">
       <widget class="QPushButton" name="m_sd_folder_dialog">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
@@ -451,6 +468,11 @@
      </item>
      <item row="4" column="10">
       <widget class="QPushButton" name="m_ld_folder_dialog">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
@@ -510,7 +532,13 @@
       </widget>
      </item>
      <item row="10" column="2" colspan="4">
-      <widget class="QLineEdit" name="m_editor_parameters_input"/>
+      <widget class="QLineEdit" name="m_editor_parameters_input">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+      </widget>
      </item>
      <item row="10" column="6">
       <widget class="QPushButton" name="m_param_info">
@@ -547,6 +575,7 @@ For Notepad ++ the advised default parameters are:
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -602,6 +631,7 @@ For Notepad ++ the advised default parameters are:
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -655,6 +685,7 @@ In most cases we advice to use a value between 80% and 90%.</string>
        <property name="font">
         <font>
          <pointsize>10</pointsize>
+         <weight>75</weight>
          <bold>true</bold>
         </font>
        </property>
@@ -676,7 +707,6 @@ In most cases we advice to use a value between 80% and 90%.</string>
       <widget class="QLabel" name="lbl_localdata">
        <property name="font">
         <font>
-         <family>MS Shell Dlg 2</family>
          <pointsize>10</pointsize>
         </font>
        </property>
