--- a/qtgui/exe/GeoDmsGuiQt.qrc
+++ b/qtgui/exe/GeoDmsGuiQt.qrc
@@ -76,6 +76,6 @@
         <file>res/images/IconCalculationTimeOverview.png</file>
         <file>res/images/TV_default_view.bmp</file>
         <file>res/images/ConfigFileList.png</file>
-        <file>res/images/test_splash_image.jpg</file>
+        <file>res/images/ruralriver.jpg</file>
     </qresource>
 </RCC>
