Summary: Added pan button and functionality to Mapview. - Default the pan tool is highlighted for clarity purposes.

--- a/qtgui/exe/GeoDmsGuiQt.qrc
+++ b/qtgui/exe/GeoDmsGuiQt.qrc
@@ -77,5 +77,6 @@
         <file>res/images/TV_default_view.bmp</file>
         <file>res/images/ConfigFileList.png</file>
         <file>res/images/ruralriver.jpg</file>
+        <file>res/images/TB_pan_button.bmp</file>
     </qresource>
 </RCC>
