--- a/qtgui/exe/res/ui/DmsDetailPageSourceDescription.ui
+++ b/qtgui/exe/res/ui/DmsDetailPageSourceDescription.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>32</height>
+    <width>903</width>
+    <height>520</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,22 +18,22 @@
     <rect>
      <x>10</x>
      <y>0</y>
-     <width>471</width>
-     <height>31</height>
+     <width>490</width>
+     <height>52</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
-    <item row="1" column="1">
+    <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="1">
-       <widget class="QRadioButton" name="sd_readonly">
+      <item row="0" column="3">
+       <widget class="QRadioButton" name="sd_all">
         <property name="font">
          <font>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="text">
-         <string>ReadOnly </string>
+         <string>All</string>
         </property>
         <attribute name="buttonGroup">
          <string notr="true">dp_sourcedescription_option</string>
@@ -73,15 +73,30 @@
         </attribute>
        </widget>
       </item>
-      <item row="0" column="3">
-       <widget class="QRadioButton" name="sd_all">
+      <item row="0" column="1">
+       <widget class="QRadioButton" name="sd_readonly">
         <property name="font">
          <font>
           <pointsize>10</pointsize>
          </font>
         </property>
         <property name="text">
-         <string>All</string>
+         <string>ReadOnly </string>
+        </property>
+        <attribute name="buttonGroup">
+         <string notr="true">dp_sourcedescription_option</string>
+        </attribute>
+       </widget>
+      </item>
+      <item row="0" column="4">
+       <widget class="QRadioButton" name="sd_dataset_information">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Dataset information</string>
         </property>
         <attribute name="buttonGroup">
          <string notr="true">dp_sourcedescription_option</string>
